; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcuse/extr_cuse_lib.c_cuse_free_unit_number_by_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcuse/extr_cuse_lib.c_cuse_free_unit_number_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@f_cuse = common dso_local global i64 0, align 8
@CUSE_ERR_INVALID = common dso_local global i32 0, align 4
@CUSE_ID_MASK = common dso_local global i32 0, align 4
@CUSE_IOCTL_FREE_UNIT_BY_ID = common dso_local global i32 0, align 4
@CUSE_ERR_NO_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cuse_free_unit_number_by_id(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* @f_cuse, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @CUSE_ERR_INVALID, align 4
  store i32 %10, i32* %3, align 4
  br label %33

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, -1
  br i1 %13, label %17, label %14

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, -1
  br i1 %16, label %17, label %24

17:                                               ; preds = %14, %11
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @CUSE_ID_MASK, align 4
  %20 = and i32 %18, %19
  %21 = load i32, i32* %4, align 4
  %22 = and i32 %21, 255
  %23 = or i32 %20, %22
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %17, %14
  %25 = load i64, i64* @f_cuse, align 8
  %26 = load i32, i32* @CUSE_IOCTL_FREE_UNIT_BY_ID, align 4
  %27 = call i32 @ioctl(i64 %25, i32 %26, i32* %4)
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %24
  %31 = load i32, i32* @CUSE_ERR_NO_MEMORY, align 4
  store i32 %31, i32* %3, align 4
  br label %33

32:                                               ; preds = %24
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %30, %9
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @ioctl(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
